--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,16 +2,18 @@
 bSubstepping=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VehicleCPP/Maps/VehicleExampleMap
+EditorStartupMap=/Game/VehicleCPP/Maps/VehicleExampleMap.VehicleExampleMap
 LocalMapOptions=
-TransitionMap=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/VehicleCPP/Maps/VehicleExampleMap
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/Car_Online.Car_OnlineGameMode
+GameDefaultMap=/Game/VehicleCPP/Maps/VehicleExampleMap.VehicleExampleMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
